--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "@nestjs/serve-static": "^4.0.2",
     "graphql": "^16.9.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "ts-morph": "^23.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
